--- a/cs102/web-8/lab5.html
+++ b/cs102/web-8/lab5.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>form test</title></head>
 <body>
-  <h1 style="color:#0000FF;">test form</h1>
-  <form method="POST" action="form.py">
+  <h1 style="color:#ff6396;">test form</h1>
+  <form method="POST" action="lab5.py">
     <input type="text" name="firstname" />
     <input type="text" name="lastname" />
     <input type="submit" value="enter!" />
