--- a/cs102/web-8/lab6.html
+++ b/cs102/web-8/lab6.html
@@ -1,8 +1,10 @@
 <html>
-<head><title>form test</title></head>
+<head>
+	<title>lab6</title>
+</head>
 <body>
-  <h1 style="color:#0000FF;">test form</h1>
-  <form method="POST" action="form.py">
+  <h1 style="color:#0000FF;">lab6</h1>
+  <form method="POST" action="lab.py">
     <input type="text" name="firstname" />
     <input type="text" name="lastname" />
     <input type="submit" value="enter!" />
